tools/flowc/tests/errors/error40.flow
FuncStruct(func : (Union1) -> void);

Union1 ::= MyStruct1, MyStruct2;

Union2 ::= Union1, MyStruct3;

	MyStruct1();
	MyStruct2();
	MyStruct3();

main() {
	FuncStruct(\val : Union1 -> {
		switch (val : Union1) {
			MyStruct1(): {}
			MyStruct2(): {}
		}
	}).func(MyStruct3());	// func should not accept MyStruct3()
}
